samples/_failures_safe/1761494952_03b09a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b389c237.c: In function ‘main’:
./samples/SAFE/__tmp_b389c237.c:134:5: error: expected expression at end of input
  134 |     addEdge(graph, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_b389c237.c:134:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_b389c237.c:35:6: note: declared here
   35 | void addEdge(struct Graph *graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_b389c237.c:134:5: error: expected declaration or statement at end of input
  134 |     addEdge(graph, 1,
      |     ^~~~~~~
